# zcash-graphs

./: .gitignore  Dockerfile  LICENSE  README.md  docker-run.sh  pyproject.toml
4467-sprout-usage/: ShieldedUsage.ipynb  SproutUsage.ipynb  grab_shielded_data.py  grab_sprout_data.py
analysis/: analyze.py  examples.py  helpers.py
perfsim/: perfsim.py
zcash_graphs/analysis/: analyze.py  examples.py
zcash_graphs/size/: __init__.py  proto3.py  tx.py
