[tool.poetry]
name = "zcash-graphs"
version = "0.1.0"
description = "Scripts for collecting and graphing data about the Zcash chain"
authors = ["Jack Grigg <jack@electriccoin.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slick-bitcoinrpc = "^0.1.4"
progressbar2 = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
